tests/fixtures/fail/stdlib/stdlib_math_sqrt_domain_vm.walrus
import "std/math";

println(math.sqrt(-1));
